k8s/manifests/blue-green-deployment/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: test-mock
  labels:
    main-http-gateway-access: "true"
    main-https-gateway-access: "true"
    env: dev
    app: mock
