k8s/manifests/blue-green-deployment/deployment-green.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-mock-green
  namespace: test-mock
  labels:
    env: dev
    app: mock
    color: green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-mock
      image: mockserver
      color: green
  template:
    metadata:
      namespace: test-mock
      labels:
        app: test-mock
        image: mockserver
        env: dev
        test: toto
        color: green
    spec:
      containers:
        - name: mockserver
          image: mockserver/mockserver:latest
          ports:
            - containerPort: 1080
          volumeMounts:
            - name: mock-config-volume
              mountPath: /etc/config/
      volumes:
        - name: mock-config-volume
          configMap:
            name: mock-config-green
---
apiVersion: v1
kind: Service
metadata:
  name: test-mock-service-green
  namespace: test-mock
spec:
  selector:
    app: test-mock
    env: dev
    color: green
  ports:
    - protocol: TCP
      port: 80
      targetPort: 1080
  type: ClusterIP
