k8s/manifests/blue-green-deployment/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: test-mock-httproute
  namespace: test-mock
spec:
  parentRefs:
    - name: main-gateway-api
      namespace: infra
      sectionName: main-http
    - name: main-gateway-api
      namespace: infra
      sectionName: main-https
  hostnames:
  - "test-mock.lan"
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /api/v1/route
      backendRefs:
        - name: test-mock-service-blue
          port: 80
          weight: 90 
        - name: test-mock-service-green
          port: 80
          weight: 10
